--- a/config/1box.yaml
+++ b/config/1box.yaml
@@ -2,5 +2,6 @@ mp:
   mp-key: 'key123'
   mp-token: 'tokenABC'
 db:
+  db-addr: 'http://localhost:8086'
   db-user: 'spiderman'
   db-pass: 'save_the_world'
